Push code len de lay ve tu laptop

--- a/admin/category.html
+++ b/admin/category.html
@@ -376,7 +376,7 @@
 
         <tr>
           <td>3</td>
-          <td>Bánh ăn vặt</td>
+          <td>Bánh ăn nhẹ</td>
           <td>Các loại bánh nhỏ gọn, tiện lợi như cupcake, cookie, hoặc bánh quy, phù hợp dùng kèm trà và cà phê.</td>
           <td>
             <div class="actions">
