--- a/admin/products.html
+++ b/admin/products.html
@@ -639,7 +639,7 @@
           <option value="">Loại bánh</option>
           <option value="sinhnhat">Bánh sinh nhật</option>
           <option value="cuoi">Bánh cưới</option>
-          <option value="anvat">Bánh ăn vặt</option>
+          <option value="anvat">Bánh ăn nhẹ</option>
         </select>
         <button id="searchBtn" class="btn-search">
           <i class="material-icons-round">search</i> Tìm kiếm
@@ -709,7 +709,7 @@
           <td>3</td>
           <td>Bánh tiramisu Ý</td>
           <td><img class="prod-img" src="../img/bdcake-3.jpg" alt="bdcake-3"></td>
-          <td>Bánh ăn vặt</td>
+          <td>Bánh ăn nhẹ</td>
           <td>220.000đ</td>
           <td>12</td>
           <td class="status-cell">
@@ -728,7 +728,7 @@
           <td>4</td>
           <td>Bánh mousse xoài lạnh</td>
           <td><img class="prod-img" src="../img/bdcake-4.jpg" alt="bdcake-4"></td>
-          <td>Bánh ăn vặt</td>
+          <td>Bánh ăn nhẹ</td>
           <td>170.000đ</td>
           <td>15</td>
           <td class="status-cell">
@@ -747,7 +747,7 @@
           <td>5</td>
           <td>Bánh red velvet kem phô mai</td>
           <td><img class="prod-img" src="../img/bdcake-5.jpg" alt="bdcake-5"></td>
-          <td>Bánh ăn vặt</td>
+          <td>Bánh ăn nhẹ</td>
           <td>210.000đ</td>
           <td>10</td>
           <td class="status-cell">
