--- a/index.html
+++ b/index.html
@@ -195,23 +195,23 @@
 
 
     <!-- Products Start -->
-    <div class="container-fluid bg-img py-5 mb-5">
+    <div class="container-fluid py-5 mb-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
                 <h2 class="text-primary font-secondary">Menu & Pricing</h2>
-                <h1 class="display-4 text-uppercase" style="color: white;">Explore Our Cakes</h1>
+                <h1 class="display-4 text-uppercase" style="color: #2B2825 ;">Các món bánh mới</h1>
             </div>
             <div class="tab-class text-center">
                 <ul
                     class="nav nav-pills d-inline-flex justify-content-center bg-dark text-uppercase border-inner p-4 mb-5">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" data-bs-toggle="pill" href="#tab-1">Birthday</a>
+                        <a class="nav-link text-white active" data-bs-toggle="pill" href="#tab-1">Bánh sinh nhật</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-2">Wedding</a>
+                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-2">Bánh cưới</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Snack</a>
+                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Bánh ăn nhẹ</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -509,41 +509,32 @@
     <div class="container-fluid service position-relative px-5 mt-5" style="margin-bottom: 135px;">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Birthday Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
-                            kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="pages/birthday-cake-1.html">Read More <i
-                                class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Wedding Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
-                            kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="pages/wedding-cake-1.html">Read More <i
-                                class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Snack Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
-                            kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="pages/snack-cake-1.html">Read More <i
-                                class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-12 col-md-6 text-center">
-                    <h1 class="text-uppercase text-light mb-4">30% Discount For This Summer</h1>
-                    <!-- <a href="" class="btn btn-primary border-inner py-3 px-5">Order Now</a> -->
+                <!-- Pagination -->
+                <div class="d-flex justify-content-center mt-4">
+                    <nav aria-label="Cake list pages">
+                        <ul class="pagination">
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" tabindex="-1">Previous</a>
+                            </li>
+                            <li class="page-item active">
+                                <a class="page-link" href="birthday-cake-1.html">1</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="birthday-cake-2.html">2</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="birthday-cake-3.html">3</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="birthday-cake-2.html">Next</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Service Start -->
+    <!-- Service End -->
 
 
     <!-- Team Start -->
@@ -646,7 +637,7 @@
                 <div class="col-lg-8 col-md-6">
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
                                 <p class="mb-0">123 Street, New York, USA</p>
@@ -669,7 +660,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="index.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
