--- a/pages/birthday-cake-2-logged.html
+++ b/pages/birthday-cake-2-logged.html
@@ -212,7 +212,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -240,7 +240,7 @@
                       <img src="../img/bdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Matcha Kem Tươi</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Matcha Kem Tươi</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan hương matcha Nhật Bản, phủ kem tươi
@@ -265,7 +265,7 @@
                       <img src="../img/bdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh mềm mịn, xen kẽ kem phô mai béo ngậy và mứt
@@ -290,7 +290,7 @@
                       <img src="../img/bdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Oreo Kem Sữa</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Oreo Kem Sữa</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Kết hợp giữa bánh bông lan sô-cô-la, lớp kem sữa
@@ -315,7 +315,7 @@
                       <img src="../img/bdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Hương vị dừa nhiệt đới hòa cùng vị bùi béo của hạnh
@@ -339,7 +339,7 @@
                       <img src="../img/bdcake-13.jpg" class="card-img-top" alt="Birthday Cake 13" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Sáng tạo độc đáo từ hương vị trà sữa Đài Loan, bánh
@@ -364,7 +364,7 @@
                       <img src="../img/bdcake-14.jpg" class="card-img-top" alt="Birthday Cake 14" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh dâu tằm chua nhẹ kết hợp cùng lớp kem sữa chua
@@ -388,7 +388,7 @@
                       <img src="../img/bdcake-15.jpg" class="card-img-top" alt="Birthday Cake 15" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan hương cà phê espresso Ý, xen lẫn lớp
@@ -413,7 +413,7 @@
                       <img src="../img/bdcake-16.jpg" class="card-img-top" alt="Birthday Cake 16" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Dâu & Socola Trắng</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Dâu & Socola Trắng</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Sự kết hợp tinh tế giữa dâu tươi và socola trắng,
@@ -478,7 +478,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -501,7 +501,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
@@ -554,7 +554,7 @@
   <script src="js/main.js"></script>
 
 
-  <!-- Script for add to cart modal -->
+  <!-- Script for Thêm vào giỏ hàng modal -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const addToCartBtn = document.getElementById("addToCartBtn9");
@@ -571,28 +571,28 @@
       const successModal = new bootstrap.Modal(modalEl);
 
       addToCartBtn.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 9
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 9
       });
       addToCartBtn2.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 10
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 10
       });
       addToCartBtn3.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 11
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 11
       });
       addToCartBtn4.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 12
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 12
       });
       addToCartBtn5.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 13
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 13
       });
       addToCartBtn6.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 14
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 14
       });
       addToCartBtn7.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 15
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 15
       });
       addToCartBtn8.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 16
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 16
       });
       modalOkBtn.addEventListener("click", () => {
         successModal.hide(); // Ẩn modal khi bấm OK
