--- a/pages/birthday-cake-3-logged.html
+++ b/pages/birthday-cake-3-logged.html
@@ -229,7 +229,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -259,7 +259,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-17.jpg" class="card-img-top" alt="Birthday Cake 17" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bắp thơm ngọt tự nhiên kết hợp cùng lớp kem sữa béo mịn, mang đến hương vị dịu nhẹ và
                           thanh tao.
@@ -281,7 +281,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hương caramel ngọt ngào kết hợp cùng chút mặn nhẹ từ muối biển, mang đến vị cân bằng tinh tế.
                         </p>
@@ -302,7 +302,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-19.jpg" class="card-img-top" alt="Birthday Cake 19" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Socola Đen</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Socola Đen</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Dành cho tín đồ socola đích thực — bánh bông lan đậm vị phủ lớp kem socola đen nguyên chất.
                         </p>
@@ -323,7 +323,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-20.jpg" class="card-img-top" alt="Birthday Cake 20" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hương vị chua thanh của chanh dây kết hợp với kem tươi ngọt nhẹ, tạo cảm giác mát lạnh sảng
                           khoái.
@@ -345,7 +345,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hòa quyện giữa vị chua dịu của việt quất và dâu tây, mang đến hương vị tươi mới và hấp dẫn.
                         </p>
@@ -366,7 +366,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Dành cho những ai yêu thích hương vị đặc trưng của sầu riêng, bánh mềm mịn cùng lớp kem béo
                           ngậy.
@@ -388,7 +388,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-23.jpg" class="card-img-top" alt="Birthday Cake 23" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Vị mát lạnh của bạc hà hòa quyện cùng lớp socola đắng nhẹ, tạo cảm giác tươi mới và sang
                           trọng.
@@ -410,7 +410,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-24.jpg" class="card-img-top" alt="Birthday Cake 24" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Vị cam tươi mát kết hợp với hạnh nhân rang giòn, tạo nên chiếc bánh vừa thơm vừa thanh nhẹ.
                         </p>
@@ -474,7 +474,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -497,7 +497,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
@@ -550,7 +550,7 @@
   <script src="js/main.js"></script>
 
 
-  <!-- Script for add to cart modal -->
+  <!-- Script for Thêm vào giỏ hàng modal -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const addToCartBtn = document.getElementById("addToCartBtn17");
@@ -567,28 +567,28 @@
       const successModal = new bootstrap.Modal(modalEl);
 
       addToCartBtn.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 17
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 17
       });
       addToCartBtn2.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 18
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 18
       });
       addToCartBtn3.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 19
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 19
       });
       addToCartBtn4.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 20
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 20
       });
       addToCartBtn5.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 21
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 21
       });
       addToCartBtn6.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 22
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 22
       });
       addToCartBtn7.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 23
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 23
       });
       addToCartBtn8.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 24
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 24
       });
       modalOkBtn.addEventListener("click", () => {
         successModal.hide(); // Ẩn modal khi bấm OK
