--- a/pages/birthday-cake-detail-1-logged.html
+++ b/pages/birthday-cake-detail-1-logged.html
@@ -285,7 +285,7 @@
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">
-                Get In Touch
+                Liên hệ
               </h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
@@ -310,7 +310,7 @@
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">
-                Quick Links
+                Truy cập nhanh
               </h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
@@ -371,7 +371,7 @@
       const successModal = new bootstrap.Modal(modalEl);
 
       addToCartBtn.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng
       });
 
       modalOkBtn.addEventListener("click", () => {
