--- a/pages/wedding-cake-3-logged.html
+++ b/pages/wedding-cake-3-logged.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -219,15 +219,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-17.jpg" class="card-img-top" alt="Birthday Cake 17" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bắp thơm ngọt tự nhiên kết hợp cùng lớp kem sữa béo mịn, mang đến hương vị dịu nhẹ và
                           thanh tao.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -238,14 +238,14 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hương caramel ngọt ngào kết hợp cùng chút mặn nhẹ từ muối biển, mang đến vị cân bằng tinh tế.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -256,14 +256,14 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-19.jpg" class="card-img-top" alt="Birthday Cake 19" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Socola Đen</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Socola Đen</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Dành cho tín đồ socola đích thực — bánh bông lan đậm vị phủ lớp kem socola đen nguyên chất.
                         </p>
                         <h5 class="fw-semibold">$57.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -274,15 +274,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-20.jpg" class="card-img-top" alt="Birthday Cake 20" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hương vị chua thanh của chanh dây kết hợp với kem tươi ngọt nhẹ, tạo cảm giác mát lạnh sảng
                           khoái.
                         </p>
                         <h5 class="fw-semibold">$48.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -293,14 +293,14 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Hòa quyện giữa vị chua dịu của việt quất và dâu tây, mang đến hương vị tươi mới và hấp dẫn.
                         </p>
                         <h5 class="fw-semibold">$54.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -311,15 +311,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Dành cho những ai yêu thích hương vị đặc trưng của sầu riêng, bánh mềm mịn cùng lớp kem béo
                           ngậy.
                         </p>
                         <h5 class="fw-semibold">$59.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -330,15 +330,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-23.jpg" class="card-img-top" alt="Birthday Cake 23" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Vị mát lạnh của bạc hà hòa quyện cùng lớp socola đắng nhẹ, tạo cảm giác tươi mới và sang
                           trọng.
                         </p>
                         <h5 class="fw-semibold">$50.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -349,14 +349,14 @@
                     <div class="card h-100 text-center">
                       <img src="../img/wdcake-24.jpg" class="card-img-top" alt="Birthday Cake 24" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Vị cam tươi mát kết hợp với hạnh nhân rang giòn, tạo nên chiếc bánh vừa thơm vừa thanh nhẹ.
                         </p>
                         <h5 class="fw-semibold">$49.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -419,7 +419,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -442,7 +442,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
