--- a/pages/birthday-cake-1-logged.html
+++ b/pages/birthday-cake-1-logged.html
@@ -213,7 +213,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -243,7 +243,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho
                           những bữa tiệc nhỏ ấm cúng.
@@ -265,7 +265,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Vani Trái Cây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh vani mềm xốp, kèm kem bơ thơm ngậy, được trang trí bằng trái cây tươi theo mùa, mang
                           hương vị thanh mát.
@@ -284,7 +284,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Red Velvet</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh Red Velvet đỏ rực, kết hợp kem phô mai béo ngậy, thích hợp cho những bữa tiệc nổi bật và
                           sang trọng.
@@ -303,7 +303,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
@@ -323,7 +323,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
@@ -343,7 +343,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Dâu Tươi</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan mềm kết hợp kem tươi và lớp dâu tươi mọng nước, mang lại hương vị ngọt ngào và
                           tươi mát.
@@ -362,7 +362,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh caramel mềm mịn, lớp kem bơ thơm, kết hợp caramel mặn ngọt, tạo điểm nhấn đặc biệt cho
                           bữa tiệc.
@@ -381,7 +381,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh phô mai béo ngậy, phủ lớp dâu tây tươi, mang đến sự kết hợp hoàn hảo giữa vị chua và
                           ngọt.
@@ -443,7 +443,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -466,7 +466,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
@@ -519,7 +519,7 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Script for add to cart modal -->
+  <!-- Script for Thêm vào giỏ hàng modal -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const addToCartBtn = document.getElementById("addToCartBtn");
@@ -536,28 +536,28 @@
       const successModal = new bootstrap.Modal(modalEl);
 
       addToCartBtn.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 1
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 1
       });
       addToCartBtn2.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 2
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 2
       });
       addToCartBtn3.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 3
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 3
       });
       addToCartBtn4.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 4
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 4
       });
       addToCartBtn5.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 5
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 5
       });
       addToCartBtn6.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 6
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 6
       });
       addToCartBtn7.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 7
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 7
       });
       addToCartBtn8.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 8
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng của bánh 8
       });
       modalOkBtn.addEventListener("click", () => {
         successModal.hide(); // Ẩn modal khi bấm OK
