--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -77,15 +77,15 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="menu.html" class="nav-item nav-link active">Menu & Pricing</a>
-          <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
+          <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
         </div>
         <div class="navbar-nav ms-auto">
-          <a href="login.html" class="nav-item nav-link">Login</a>
-          <a href="signup.html" class="nav-item nav-link">Signup</a>
+          <a href="login.html" class="nav-item nav-link">Đăng nhập</a>
+          <a href="signup.html" class="nav-item nav-link">Đăng ký</a>
         </div>
       </div>
     </div>
@@ -97,10 +97,24 @@
     <div class="position-relative">
       <!-- Nút Back -->
       <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
-        style="top: -90px; left: -318px; z-index: 1000">
-        ← Back
+        style="top: -90px; left: -290px; z-index: 1000">
+        ← Quay lại
       </a>
     </div>
+    <!-- Breadcrumb (quick-fix, absolute) -->
+    <div class="position-absolute" style="top: -90px; left: 93px; z-index:1001;">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-light p-2 rounded mb-0" style="min-width:220px;">
+          <li class="breadcrumb-item mb-0">
+            <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+              <i class="bi bi-house-door-fill me-1"></i> Trang chủ
+            </a>
+          </li>
+          <li class="breadcrumb-item active fw-semibold mb-0" aria-current="page">Bánh sinh nhật</li>
+        </ol>
+      </nav>
+    </div>
+
 
     <!-- Menu 3 gạch -->
     <div class="dropdown position-absolute" style="top: -90px; right: -60px">
@@ -110,13 +124,13 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
         <li>
-          <a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a>
+          <a class="dropdown-item" href="birthday-cake-1.html">Bánh sinh nhật</a>
         </li>
         <li>
-          <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
+          <a class="dropdown-item" href="wedding-cake-1.html">Bánh cưới</a>
         </li>
         <li>
-          <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
+          <a class="dropdown-item" href="snack-cake-1.html">Bánh ăn nhẹ</a>
         </li>
       </ul>
     </div>
@@ -142,30 +156,31 @@
 
 
 
+
     <!-- Main content: Advanced Search + Cake list -->
     <div class="position-relative">
       <!-- Advanced Search Section (đưa ra ngoài để nằm dưới nút Back) -->
-      <div class="card p-4 shadow-sm advanced-search position-absolute" style="top: 0; left: -300px;">
+      <div class="card p-4 shadow-sm advanced-search position-absolute" style="top: 0; left: -275px;">
         <h5 class="text-primary mb-3">
-          <i class="fas fa-search me-2"></i>Advanced Search
+          <i class="fas fa-search me-2"></i>Tìm kiếm nâng cao
         </h5>
 
         <div class="mb-3">
-          <label for="searchName" class="form-label fw-semibold">Search by Name</label>
-          <input type="text" id="searchName" class="form-control" placeholder="Enter cake name..." />
+          <label for="searchName" class="form-label fw-semibold">Tìm theo tên</label>
+          <input type="text" id="searchName" class="form-control" placeholder="Nhập tên bánh..." />
         </div>
 
         <div class="mb-3">
           <select class="form-select mb-2">
-            <option>All Categories</option>
-            <option>Birthday</option>
-            <option>Wedding</option>
-            <option>Snack</option>
+            <option>Tất cả danh mục</option>
+            <option>Bánh sinh nhật</option>
+            <option>Bánh cưới</option>
+            <option>Bánh ăn nhẹ</option>
           </select>
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -173,7 +188,7 @@
 
         <div class="d-flex justify-content-end">
           <button class="btn btn-primary">
-            <i class="fas fa-filter me-2"></i>Filter
+            <i class="fas fa-filter me-2"></i>Lọc
           </button>
         </div>
       </div>
@@ -195,7 +210,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho
                           những bữa tiệc nhỏ ấm cúng.
@@ -203,10 +218,10 @@
                         <h5 class="fw-semibold">$45.99</h5>
                         <button class="btn btn-primary mt-2"
                           onclick="window.location.href='birthday-cake-detail-1.html'">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -217,15 +232,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Vani Trái Cây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh vani mềm xốp, kèm kem bơ thơm ngậy, được trang trí bằng trái cây tươi theo mùa, mang
                           hương vị thanh mát.
                         </p>
                         <h5 class="fw-semibold">$39.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -236,15 +251,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Red Velvet</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh Red Velvet đỏ rực, kết hợp kem phô mai béo ngậy, thích hợp cho những bữa tiệc nổi bật và
                           sang trọng.
                         </p>
                         <h5 class="fw-semibold">$49.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -255,16 +270,16 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -275,16 +290,16 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -295,15 +310,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Dâu Tươi</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan mềm kết hợp kem tươi và lớp dâu tươi mọng nước, mang lại hương vị ngọt ngào và
                           tươi mát.
                         </p>
                         <h5 class="fw-semibold">$44.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -314,15 +329,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh caramel mềm mịn, lớp kem bơ thơm, kết hợp caramel mặn ngọt, tạo điểm nhấn đặc biệt cho
                           bữa tiệc.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -333,15 +348,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh phô mai béo ngậy, phủ lớp dâu tây tươi, mang đến sự kết hợp hoàn hảo giữa vị chua và
                           ngọt.
                         </p>
                         <h5 class="fw-semibold">$50.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -356,13 +371,13 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Pagination -->
   <div class="d-flex justify-content-center mt-4">
     <nav aria-label="Cake list pages">
       <ul class="pagination">
         <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1">Previous</a>
+          <a class="page-link" href="birthday-cake-1.html" tabindex="-1">Trang trước</a>
         </li>
         <li class="page-item active">
           <a class="page-link" href="birthday-cake-1.html">1</a>
@@ -374,7 +389,7 @@
           <a class="page-link" href="birthday-cake-3.html">3</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-2.html">Next</a>
+          <a class="page-link" href="birthday-cake-3.html">Trang sau</a>
         </li>
       </ul>
     </nav>
@@ -401,7 +416,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -424,27 +439,25 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="../index.html"><i
-                    class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
                 <a class="text-secondary mb-2" href="about.html"><i
-                    class="bi bi-arrow-right text-primary me-2"></i>About
+                    class="bi bi-arrow-right text-primary me-2"></i>Giới thiệu
                   Us</a>
-                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
-                  &
-                  Pricing</a>
+                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Sản phẩm</a>
                 <a class="text-secondary mb-2" href="contact.html"><i
-                    class="bi bi-arrow-right text-primary me-2"></i>Contact
-                  Us</a>
+                    class="bi bi-arrow-right text-primary me-2"></i>Liên hệ</a>
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
+              <h4 class="text-primary text-uppercase mb-4">Nhận thông báo</h4>
               <form action="">
                 <div class="input-group">
-                  <input type="text" class="form-control border-white p-3" placeholder="Your Email" />
-                  <button class="btn btn-primary">Sign Up</button>
+                  <input type="text" class="form-control border-white p-3" placeholder="Email" />
+                  <button class="btn btn-primary">Đăng ký</button>
                 </div>
               </form>
             </div>
