--- a/pages/menu-logged.html
+++ b/pages/menu-logged.html
@@ -244,7 +244,7 @@
 
                         <br><br><br>
 
-                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i
+                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Đọc thêm <i
                                 class="bi bi-arrow-right"></i></a>
 
                     </div>
@@ -344,7 +344,7 @@
 
                         <br><br><br>
 
-                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i
+                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Đọc thêm <i
                                 class="bi bi-arrow-right"></i></a>
                     </div>
                     <div id="tab-3" class="tab-pane fade show p-0">
@@ -442,7 +442,7 @@
                         </div>
                         <br><br><br>
 
-                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i
+                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Đọc thêm <i
                                 class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -466,7 +466,7 @@
                         at sea ea at dolor justo ipsum duo rebum sea. Eos vero eos vero ea et dolore eirmod et. Dolores
                         diam duo lorem. Elitr ut dolores magna sit. Sea dolore sed et.</p>
                     <a href="" class="btn btn-primary border-inner py-3 px-5 me-3">Shop Now</a>
-                    <a href="" class="btn btn-dark border-inner py-3 px-5">Read More</a>
+                    <a href="" class="btn btn-dark border-inner py-3 px-5">Đọc thêm</a>
                 </div>
             </div>
         </div>
@@ -494,7 +494,7 @@
                 <div class="col-lg-8 col-md-6">
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
                                 <p class="mb-0">123 Street, New York, USA</p>
@@ -517,7 +517,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
