--- a/pages/service.html
+++ b/pages/service.html
@@ -119,7 +119,7 @@
                         <h4 class="text-uppercase mb-3">Birthday Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="">Đọc thêm <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -127,7 +127,7 @@
                         <h4 class="text-uppercase mb-3">Wedding Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="">Đọc thêm <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -135,7 +135,7 @@
                         <h4 class="text-uppercase mb-3">Custom Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="">Đọc thêm <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-6 text-center">
@@ -168,7 +168,7 @@
                 <div class="col-lg-8 col-md-6">
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
                                 <p class="mb-0">123 Street, New York, USA</p>
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
