--- a/pages/snack-cake-1.html
+++ b/pages/snack-cake-1.html
@@ -172,7 +172,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -202,7 +202,7 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-1.jpg" class="card-img-top" alt="Birthday Cake 1" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho
                           những bữa tiệc nhỏ ấm cúng.
@@ -210,10 +210,10 @@
                         <h5 class="fw-semibold">$45.99</h5>
                         <button class="btn btn-primary mt-2"
                           onclick="window.location.href='birthday-cake-detail-1.html'">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -224,15 +224,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-2.jpg" class="card-img-top" alt="Birthday Cake 2" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Vani Trái Cây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh vani mềm xốp, kèm kem bơ thơm ngậy, được trang trí bằng trái cây tươi theo mùa, mang
                           hương vị thanh mát.
                         </p>
                         <h5 class="fw-semibold">$39.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -243,15 +243,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-3.jpg" class="card-img-top" alt="Birthday Cake 3" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Red Velvet</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh Red Velvet đỏ rực, kết hợp kem phô mai béo ngậy, thích hợp cho những bữa tiệc nổi bật và
                           sang trọng.
                         </p>
                         <h5 class="fw-semibold">$49.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -262,16 +262,16 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-4.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -282,16 +282,16 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-5.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
                           hảo cho tín đồ socola.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -302,15 +302,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-6.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Dâu Tươi</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan mềm kết hợp kem tươi và lớp dâu tươi mọng nước, mang lại hương vị ngọt ngào và
                           tươi mát.
                         </p>
                         <h5 class="fw-semibold">$44.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -321,15 +321,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-7.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh caramel mềm mịn, lớp kem bơ thơm, kết hợp caramel mặn ngọt, tạo điểm nhấn đặc biệt cho
                           bữa tiệc.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -340,15 +340,15 @@
                     <div class="card h-100 text-center">
                       <img src="../img/snack-8.jpg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
+                        <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh phô mai béo ngậy, phủ lớp dâu tây tươi, mang đến sự kết hợp hoàn hảo giữa vị chua và
                           ngọt.
                         </p>
                         <h5 class="fw-semibold">$50.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">Đọc thêm</button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -408,7 +408,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -431,7 +431,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="../index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
