--- a/pages/wedding-cake-2-logged.html
+++ b/pages/wedding-cake-2-logged.html
@@ -186,7 +186,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="priceRange" class="form-label fw-semibold">Price Range:
+          <label for="priceRange" class="form-label fw-semibold">Khoảng giá:
             <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
           </label>
           <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
@@ -214,7 +214,7 @@
                       <img src="../img/wdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Matcha Kem Tươi</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Matcha Kem Tươi</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan hương matcha Nhật Bản, phủ kem tươi
@@ -223,10 +223,10 @@
                         </p>
                         <h5 class="fw-semibold">$47.99</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -238,7 +238,7 @@
                       <img src="../img/wdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Lớp bánh mềm mịn, xen kẽ kem phô mai béo ngậy và mứt
@@ -247,10 +247,10 @@
                         </p>
                         <h5 class="fw-semibold">$53.49</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -262,7 +262,7 @@
                       <img src="../img/wdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Oreo Kem Sữa</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Oreo Kem Sữa</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Kết hợp giữa bánh bông lan sô-cô-la, lớp kem sữa
@@ -271,10 +271,10 @@
                         </p>
                         <h5 class="fw-semibold">$42.99</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -286,7 +286,7 @@
                       <img src="../img/wdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Hương vị dừa nhiệt đới hòa cùng vị bùi béo của hạnh
@@ -294,10 +294,10 @@
                         </p>
                         <h5 class="fw-semibold">$48.99</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -309,7 +309,7 @@
                       <img src="../img/wdcake-13.jpeg" class="card-img-top" alt="Birthday Cake 13" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Sáng tạo độc đáo từ hương vị trà sữa Đài Loan, bánh
@@ -318,10 +318,10 @@
                         </p>
                         <h5 class="fw-semibold">$51.99</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -333,7 +333,7 @@
                       <img src="../img/wdcake-14.jpeg" class="card-img-top" alt="Birthday Cake 14" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh dâu tằm chua nhẹ kết hợp cùng lớp kem sữa chua
@@ -341,10 +341,10 @@
                         </p>
                         <h5 class="fw-semibold">$49.49</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -356,7 +356,7 @@
                       <img src="../img/wdcake-15.jpeg" class="card-img-top" alt="Birthday Cake 15" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Bánh bông lan hương cà phê espresso Ý, xen lẫn lớp
@@ -365,10 +365,10 @@
                         </p>
                         <h5 class="fw-semibold">$55.99</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -380,7 +380,7 @@
                       <img src="../img/wdcake-16.jpeg" class="card-img-top" alt="Birthday Cake 16" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
-                          <a href="#">Bánh Sinh Nhật Kem Dâu & Socola Trắng</a>
+                          <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Dâu & Socola Trắng</a>
                         </h6>
                         <p class="mb-3 flex-grow-1">
                           Sự kết hợp tinh tế giữa dâu tươi và socola trắng,
@@ -389,10 +389,10 @@
                         </p>
                         <h5 class="fw-semibold">$58.49</h5>
                         <button class="btn btn-primary mt-2">
-                          Read More
+                          Đọc thêm
                         </button>
                         <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -450,7 +450,7 @@
         <div class="col-lg-8 col-md-6">
           <div class="row gx-5">
             <div class="col-lg-4 col-md-12 pt-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+              <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0">123 Street, New York, USA</p>
@@ -473,7 +473,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+              <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
