--- a/pages/wedding-cake-2.html
+++ b/pages/wedding-cake-2.html
@@ -213,7 +213,7 @@
 
           <div class="mb-3">
             <label for="priceRange" class="form-label fw-semibold"
-              >Price Range:
+              >Khoảng giá:
               <span id="priceValue" class="text-success fw-bold"
                 >0 ₫ - 5,000,000 ₫</span
               >
@@ -254,7 +254,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Matcha Kem Tươi</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Matcha Kem Tươi</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Bánh bông lan hương matcha Nhật Bản, phủ kem tươi
@@ -263,10 +263,10 @@
                           </p>
                           <h5 class="fw-semibold">$47.99</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -282,7 +282,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Lớp bánh mềm mịn, xen kẽ kem phô mai béo ngậy và mứt
@@ -291,10 +291,10 @@
                           </p>
                           <h5 class="fw-semibold">$53.49</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -310,7 +310,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Oreo Kem Sữa</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Oreo Kem Sữa</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Kết hợp giữa bánh bông lan sô-cô-la, lớp kem sữa
@@ -319,10 +319,10 @@
                           </p>
                           <h5 class="fw-semibold">$42.99</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -338,7 +338,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Hương vị dừa nhiệt đới hòa cùng vị bùi béo của hạnh
@@ -346,10 +346,10 @@
                           </p>
                           <h5 class="fw-semibold">$48.99</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -365,7 +365,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Sáng tạo độc đáo từ hương vị trà sữa Đài Loan, bánh
@@ -374,10 +374,10 @@
                           </p>
                           <h5 class="fw-semibold">$51.99</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -393,7 +393,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Bánh dâu tằm chua nhẹ kết hợp cùng lớp kem sữa chua
@@ -401,10 +401,10 @@
                           </p>
                           <h5 class="fw-semibold">$49.49</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -420,7 +420,7 @@
                         />
                         <div class="card-body d-flex flex-column">
                           <h6 class="fw-bold">
-                            <a href="#">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
+                            <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
                           </h6>
                           <p class="mb-3 flex-grow-1">
                             Bánh bông lan hương cà phê espresso Ý, xen lẫn lớp
@@ -429,10 +429,10 @@
                           </p>
                           <h5 class="fw-semibold">$55.99</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -459,10 +459,10 @@
                           </p>
                           <h5 class="fw-semibold">$58.49</h5>
                           <button class="btn btn-primary mt-2">
-                            Read More
+                            Đọc thêm
                           </button>
                           <button class="btn btn-primary mt-2">
-                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                            <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -522,7 +522,7 @@
           <div class="col-lg-8 col-md-6">
             <div class="row gx-5">
               <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
+                <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
                   <p class="mb-0">123 Street, New York, USA</p>
@@ -554,7 +554,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
+                <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                 <div class="d-flex flex-column justify-content-start">
                   <a class="text-secondary mb-2" href="../index.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
